11/25/13 add graph placeholder to 'Custom' screen
11/25/13 revert to using same color for drain cleaner and battery acid, this was intentional
11/25/13 Basics: make 'milk' the initial solute
11/25/13 use smaller default font for title(s) on ExpandCollapseBar
11/25/13 Basics: hide pointer on pH meter when it's not displaying a value
11/25/13 Basics: move water faucet down a bit
11/25/13 move 'Water' label on faucet
11/25/13 remove 'decoration' option from scenery-phet.FaucetNode
11/22/13 Solutions: adjust layout and sizes of match design doc
11/22/13 add 'rightTitle' option to ExpandCollapseBar
11/21/13 Solutions: add expand/collapse bar for graph
11/21/13 add optional 'rightTitle' to ExpandCollapseBar, to support graphs
11/21/13 Solutions: add placeholder (rectangle) for graph, in order to work on general layout
11/21/13 Solutions: expand/collapse bar for pH meter
11/21/13 implement pH meter for 'Solutions' screen
11/21/13 set up model and view for 'Solutions' screen
11/21/13 make 'Neutral' label optional on PHScaleNode, since it's only labeled in 'Basics' sim
11/21/13 change request: 'spit' color should be closer to 'water', try RGB=200,230,230
11/21/13 change request: use a more saturated blue for 'drain cleaner', to distinguish it from water, try RGB=92,111,255
11/21/13 change request: make 'milk' more 'off white', try RGB=250,250,250
11/21/13 change request: bold font for 'Acidic', 'Basic', 'pH' and '7 (Neutral)'
11/21/13 change request: increase y-margin on pH value display
11/20/13 use a darker gray for pH meter wire, since it overlaps the gray faucet so frequently
11/20/13 prevent total volume from exceeding max
11/20/13 tweak all 'diluted' solute colors
11/20/13 change 'Drain Cleaner' color to toilet-bowl-cleaner blue
11/19/13 fix 'reset all' for 'Basics' screen
11/19/13 use same color as beers-law-lab for water
11/19/13 switch to a color range for solutes
11/19/13 make 'color' static for solvent and solute, it's dynamic only for solution